# demo-nix-bazel-tree-sitter

./: .envrc  .gitignore  README.md  WORKSPACE.bazel  flake.nix
tree-sitter-nbts/: BUILD.bazel  Cargo.toml  check-generated.sh  grammar.js  main.rs  regenerate.sh
tree-sitter-nbts/bindings/rust/: lib.rs
tree-sitter-nbts/src/: grammar.json  node-types.json  parser.c
